# lvgl_simulator_sdl

./: .clang-format  CMakeLists.txt  lv_conf.h  lv_drv_conf.h  readme.md
glue_to_stm32/: FreeRTOS.h  cmsis_os.cpp  cmsis_os.h  get_tick.cpp  get_tick.h  portmacro.h  queue.cpp  queue.h  semphr.cpp  semphr.h  task.cpp  task.h
src/: app_dashboard.hpp  lvgl_app.hpp  lvgl_app_global_types.cpp  lvgl_app_global_types.hpp  lvgl_app_manager.cpp  lvgl_thread.cpp  lvgl_thread.h  main.cpp  test_app.hpp
src/app/: app_dashboard.cpp  app_dashboard.hpp  dashboard.hpp
